[package]
name = "cc-pre-proxy"
version = "1.0.0"
authors = ["booky10 <boooky10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0"
env_logger = "0.9.1"
log = "0.4"
